[tool.poetry]
name = "airbridge"
version = "0.1.0"
description = "Description of your package"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "airbridge", from = "src" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.scripts]
main = 'airbridge.run:main'

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.1.3"
filelock = "^3.12.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mock = "^5.1.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_paths = ["src"]
